// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extra-details-pbehavior Renders \`extra-details-pbehavior\` with full pbehavior 1`] = `
<div class="v-tooltip__content" style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;">
  <div><strong>Periodic behaviors</strong>
    <div>
      <div class="mt-2 font-weight-bold">pbehavior-name</div>
      <div>Author: pbehavior-author</div>
      <div>Type: type-name</div>
      <div>Reason: pbehavior-reason-name</div>
      <div>07/12/2013 3:13:20&nbsp;- 07/12/2013 6:00:00</div>
      <div>rrule</div>
      <div>Last comment:<div class="ml-2">- pbehavior-comment-1-author: pbehavior-comment-1-message</div>
      </div>
      <hr class="v-divider theme--light">
    </div>
  </div>
</div><i aria-hidden="true" class="v-icon c-extra-details__badge secondary accent-2 white--text icon icon-name theme--light" style="font-size: 16px;"></i><span class="v-tooltip v-tooltip--top"><transition-stub name="slide-y-reverse-transition"></transition-stub></span>
`;

exports[`extra-details-pbehavior Renders \`extra-details-pbehavior\` with pbehavior started in previous month 1`] = `
<div class="v-tooltip__content" style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;">
  <div><strong>Periodic behaviors</strong>
    <div>
      <div class="mt-2 font-weight-bold">pbehavior-name</div>
      <div>Author: pbehavior-author</div>
      <!---->
      <div>Reason: pbehavior-reason-name</div>
      <div>07/08/2013 16:13:20&nbsp;- 07/08/2013 19:00:00</div>
      <div>rrule</div>
      <div>Last comment:<div class="ml-2">- pbehavior-comment-1-author: pbehavior-comment-1-message</div>
      </div>
      <hr class="v-divider theme--light">
    </div>
  </div>
</div><i aria-hidden="true" class="v-icon c-extra-details__badge secondary accent-2 white--text material-icons theme--light" style="font-size: 16px;"></i><span class="v-tooltip v-tooltip--top"><transition-stub name="slide-y-reverse-transition"></transition-stub></span>
`;

exports[`extra-details-pbehavior Renders \`extra-details-pbehavior\` without comments 1`] = `
<div class="v-tooltip__content" style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;">
  <div><strong>Periodic behaviors</strong>
    <div>
      <div class="mt-2 font-weight-bold">pbehavior-name</div>
      <div>Author: pbehavior-author</div>
      <div>Type: type-name</div>
      <div>Reason: pbehavior-reason-name</div>
      <div>07/12/2013 3:13:20&nbsp;- 07/12/2013 6:00:00</div>
      <div>rrule</div>
      <div>Last comment:<div class="ml-2">- pbehavior-comment-1-author: pbehavior-comment-1-message</div>
      </div>
      <hr class="v-divider theme--light">
    </div>
  </div>
</div><i aria-hidden="true" class="v-icon c-extra-details__badge secondary accent-2 white--text icon icon-name theme--light" style="font-size: 16px;"></i><span class="v-tooltip v-tooltip--top"><transition-stub name="slide-y-reverse-transition"></transition-stub></span>
`;

exports[`extra-details-pbehavior Renders \`extra-details-pbehavior\` without reason 1`] = `
<div class="v-tooltip__content" style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;">
  <div><strong>Periodic behaviors</strong>
    <div>
      <div class="mt-2 font-weight-bold">pbehavior-name</div>
      <div>Author: pbehavior-author</div>
      <div>Type: type-name</div>
      <!---->
      <div>07/12/2013 3:13:20&nbsp;- 07/12/2013 6:00:00</div>
      <div>rrule</div>
      <div>Last comment:<div class="ml-2">- pbehavior-comment-1-author: pbehavior-comment-1-message</div>
      </div>
      <hr class="v-divider theme--light">
    </div>
  </div>
</div><i aria-hidden="true" class="v-icon c-extra-details__badge secondary accent-2 white--text icon icon-name theme--light" style="font-size: 16px;"></i><span class="v-tooltip v-tooltip--top"><transition-stub name="slide-y-reverse-transition"></transition-stub></span>
`;

exports[`extra-details-pbehavior Renders \`extra-details-pbehavior\` without rrule 1`] = `
<div class="v-tooltip__content" style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;">
  <div><strong>Periodic behaviors</strong>
    <div>
      <div class="mt-2 font-weight-bold">pbehavior-name</div>
      <div>Author: pbehavior-author</div>
      <div>Type: type-name</div>
      <div>Reason: pbehavior-reason-name</div>
      <div>07/12/2013 3:13:20&nbsp;- 07/12/2013 6:00:00</div>
      <!---->
      <div>Last comment:<div class="ml-2">- pbehavior-comment-1-author: pbehavior-comment-1-message</div>
      </div>
      <hr class="v-divider theme--light">
    </div>
  </div>
</div><i aria-hidden="true" class="v-icon c-extra-details__badge secondary accent-2 white--text icon icon-name theme--light" style="font-size: 16px;"></i><span class="v-tooltip v-tooltip--top"><transition-stub name="slide-y-reverse-transition"></transition-stub></span>
`;

exports[`extra-details-pbehavior Renders \`extra-details-pbehavior\` without tstop 1`] = `
<div class="v-tooltip__content" style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;">
  <div><strong>Periodic behaviors</strong>
    <div>
      <div class="mt-2 font-weight-bold">pbehavior-name</div>
      <div>Author: pbehavior-author</div>
      <div>Type: type-name</div>
      <div>Reason: pbehavior-reason-name</div>
      <div>07/12/2013 3:13:20
        <!---->
      </div>
      <div>rrule</div>
      <div>Last comment:<div class="ml-2">- pbehavior-comment-1-author: pbehavior-comment-1-message</div>
      </div>
      <hr class="v-divider theme--light">
    </div>
  </div>
</div><i aria-hidden="true" class="v-icon c-extra-details__badge secondary accent-2 white--text icon icon-name theme--light" style="font-size: 16px;"></i><span class="v-tooltip v-tooltip--top"><transition-stub name="slide-y-reverse-transition"></transition-stub></span>
`;
